hphp/test/zend/bad/ext/spl/tests/SplDoublyLinkedList_add_missing_parameter2.php
<?php
$dll = new SplDoublyLinkedList();
var_dump($dll->add(2));
?>